<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/InputField"
        app:endIconMode="password_toggle"
        android:hint="@string/hint_current_password">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/currentPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/InputField"
        app:endIconMode="password_toggle"
        android:hint="@string/label_new_password"
        android:layout_marginTop="@dimen/spacing_normal">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/InputField"
        app:endIconMode="password_toggle"
        android:hint="@string/label_confirm_password"
        android:layout_marginTop="@dimen/spacing_normal">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_str_6_chars_uppercase_number_and"
        android:textSize="@dimen/text_label_small"
        android:textColor="@color/text_secondary"
        android:layout_marginTop="@dimen/spacing_small"/>

</LinearLayout>
